--- a/src/app/home/clients/clients.scss
+++ b/src/app/home/clients/clients.scss
@@ -8,6 +8,26 @@
   background-repeat: no-repeat;
   background-position: center;
   padding: 80px 0 140px 0;
+  .title__ {
+    position: relative;
+    text-align: center;
+    .brownist-text {
+      color: var(--green);
+      font-size: 2rem;
+    }
+    .main-title {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 8px;
+      font-size: 2.5rem;
+    }
+    .label-arrow {
+      position: absolute;
+      left: 200px;
+      top: 0;
+    }
+  }
 }
 
 .parallax {
@@ -42,28 +62,11 @@
 .scroll-logo:hover {
   filter: grayscale(0%);
   opacity: 1;
-  transform: scale(1.1);
+  transform: scale(1.2);
 }
 
 
-.title__ {
-  position: relative;
-  text-align: center;
-  .brownist-text {
-    color: var(--green);
-    font-size: 2rem;
-  }
-  .main-title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .label-arrow {
-    position: absolute;
-    left: 200px;
-    top: 0;
-  }
-}
+
 
 
 
