--- a/src/app/home/hero/hero.scss
+++ b/src/app/home/hero/hero.scss
@@ -50,13 +50,13 @@ $background-blue: #eff6ff;
   align-items: center;
   gap: 1.5rem;
   max-width: 80%;
-  padding: 1.5rem 1.25rem 1.25rem 1.25rem;
+  padding: 40px 20px 40px 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   gap: 1.5rem;
-  border-radius: 12px;
+  border-radius: 24px;
   box-shadow: 0px 18px 37.5px 0px rgba(58, 73, 249, 0.1);
   background-color: #fff;
   position: sticky;
@@ -77,7 +77,7 @@ $background-blue: #eff6ff;
   width: 400px;
   height: 400px;
   background: linear-gradient(180deg, #ddd6fe 0%, #c4b5fd 100%);
-  border-radius: 1rem;
+  border-radius: 16px;
   overflow: hidden;
   box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
   
@@ -200,9 +200,10 @@ $background-blue: #eff6ff;
 
 .hero-content {
   .main-title {
-    font-size: 4rem;
-    font-weight: 700;
-    line-height: 1.1;
+    font-size: 100px;
+    font-weight: 900;
+    line-height: 1;
+    letter-spacing: 1px;
     margin: 0;
 
     @media (max-width: 768px) {
