--- a/src/app/home/clients/clients.scss
+++ b/src/app/home/clients/clients.scss
@@ -8,6 +8,9 @@
   background-repeat: no-repeat;
   background-position: center;
   padding: 80px 0 140px 0;
+  @media (max-width: 768px) {
+    padding: 40px 0 80px 0;
+  }
   .title__ {
     position: relative;
     text-align: center;
@@ -21,11 +24,19 @@
       align-items: center;
       gap: 8px;
       font-size: 2.5rem;
+      @media (max-width: 768px) {
+        flex-direction: column;
+        font-size: 2rem;
+        gap: 0;
+      }
     }
     .label-arrow {
       position: absolute;
       left: 200px;
       top: 0;
+      @media (max-width: 768px) {
+        left: 0;
+      }
     }
   }
 }
@@ -57,6 +68,9 @@
   filter: grayscale(100%);
   opacity: 0.8;
   transition: all 0.3s ease;
+  @media (max-width: 768px) {
+    height: 64px;
+  }
 }
 
 .scroll-logo:hover {
