--- a/src/app/home/featuredBlog/featured-blog.scss
+++ b/src/app/home/featuredBlog/featured-blog.scss
@@ -22,7 +22,12 @@ $background-white: #f8f9fa;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* From Uiverse.io by satyamchaudharydev */ 
+    @media (max-width: 768px) {
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+      margin-bottom: 24px;
+    }
     .readmore-bbtn {
       padding: 0;
       margin: 0;
@@ -110,6 +115,13 @@ $background-white: #f8f9fa;
       line-height: 1;
       small {
         font-size: 2rem;
+        @media (max-width: 768px) {
+          font-size: 1rem;
+        }
+      }
+      @media (max-width: 768px) {
+        font-size: 2rem;
+        margin-bottom: 16px;
       }
     }
     
