--- a/src/app/home/hero/hero.scss
+++ b/src/app/home/hero/hero.scss
@@ -26,6 +26,7 @@ $background-blue: #eff6ff;
   
   @media (max-width: 768px) {
     padding: 1rem;
+    min-height: unset;
   }
 }
 
@@ -65,7 +66,10 @@ $background-blue: #eff6ff;
   height: -moz-fit-content;
   height: fit-content;
   @media (min-width: 1024px) {
-    // align-items: flex-start;
+    max-width: 100%;
+  }
+  @media (max-width: 768px) {
+    max-width: 100%;
   }
 }
 
@@ -88,7 +92,7 @@ $background-blue: #eff6ff;
   }
   
   @media (max-width: 768px) {
-    width: 280px;
+    width: 100%;
     height: 336px;
   }
 }
