--- a/src/app/home/projects/projects.scss
+++ b/src/app/home/projects/projects.scss
@@ -32,7 +32,7 @@ $shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
   padding: 80px 0 140px 0;
   
   @media (max-width: 768px) {
-    padding: 1rem;
+    padding: 2rem 1rem 1rem 1rem;
   }
   .title__ {
     text-align: left;
@@ -40,6 +40,9 @@ $shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
     margin-bottom: 40px;
     display: flex;
     gap: 24px;
+    @media (max-width: 768px) {
+      margin-bottom: 24px;
+    }
     .label-arrow {
       left: 0;
     }
@@ -56,6 +59,9 @@ $shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
 
 .project-container {  
   @media (max-width: 1024px) {}
+  @media (max-width: 768px) {
+    padding: 0;
+  }
   .card-wrapper {
     .card {
       display: grid;
@@ -68,6 +74,11 @@ $shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
       margin-bottom: 40px;
       grid-template-columns: repeat(2,1fr);
       align-items: center;
+      @media (max-width: 768px) {
+        grid-template-columns: repeat(1,1fr);
+        padding: 16px;
+        gap: 16px;
+      }
       figure {
         img {
           width: 100%;
@@ -92,9 +103,6 @@ $shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
 .project-content-section {
   color: $text-white;
   
-  @media (max-width: 1024px) {
-    text-align: center;
-  }
 }
 
 .main-title {
@@ -124,6 +132,7 @@ $shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
   
   @media (max-width: 1024px) {
     max-width: none;
+    margin-bottom: 1rem;
   }
 }
 
@@ -134,7 +143,7 @@ $shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
   margin-bottom: 2rem;
   
   @media (max-width: 1024px) {
-    justify-content: center;
+    justify-content: flex-start;
   }
 }
 
