--- a/src/app/home/testimonial/testimonial.scss
+++ b/src/app/home/testimonial/testimonial.scss
@@ -41,6 +41,13 @@
       top: 30px;
       left: -30px;
       z-index: -1;
+      @media (max-width: 768px) {
+        width: 64px;
+        height: 64px;
+        background-size: contain;
+        top: 80%;
+        left: 0;
+      }
     }
   }
 
@@ -57,11 +64,17 @@
   .testimonial__carousel {
     max-width: 80%;
     width: 100%;
+    @media (max-width: 768px) {
+      max-width: 100%;
+    }
   }
 
   &__card {
     padding: 2rem;
     min-height: 400px;
+    @media (max-width: 768px) {
+      padding: 2rem 1rem;
+    }
   }
 
   &__card-header {
@@ -76,6 +89,9 @@
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
     gap: 24px;
+    @media (max-width: 768px) {
+      width: 100%;
+    }
   }
 
   &__avatar {
@@ -98,6 +114,10 @@
     border-radius: 24px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+    @media (max-width: 768px) {
+      width: 100%;
+      text-align: left;
+    }
   }
 
   .testimonial__pagination {
@@ -158,6 +178,12 @@
 
     .custom-arrow {
       margin: 0.5rem auto;
+    }
+    .swiper-horizontal > .swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal {
+      bottom: var(--swiper-pagination-bottom, 0);
+      top: var(--swiper-pagination-top, auto);
+      left: 0;
+      width: 100%;
     }
   }
   .swiper-button-prev, .swiper-button-next {
