--- a/src/app/home/hero/hero.scss
+++ b/src/app/home/hero/hero.scss
@@ -25,7 +25,7 @@ $background-blue: #eff6ff;
   padding: 10rem 0 9rem;
   
   @media (max-width: 768px) {
-    padding: 1rem;
+    padding: 7rem 1rem 4rem 1rem;
     min-height: unset;
   }
 }
@@ -65,11 +65,9 @@ $background-blue: #eff6ff;
   align-self: flex-start;
   height: -moz-fit-content;
   height: fit-content;
-  @media (min-width: 1024px) {
-    max-width: 100%;
-  }
   @media (max-width: 768px) {
     max-width: 100%;
+    position: unset;
   }
 }
 
@@ -181,6 +179,10 @@ $background-blue: #eff6ff;
     position: absolute;
     left: -70px;
     top: 20px;
+    @media (max-width: 768px) {
+      top: 30px;
+      left: 10px;
+    }
   }
   @media (max-width: 1024px) {
     justify-content: center;
