--- a/src/app/about/hero/hero.scss
+++ b/src/app/about/hero/hero.scss
@@ -8,7 +8,9 @@
   height: 100vh;
   justify-content: center;
   align-items: center;
-
+  @media (max-width: 768px) {
+    height: 70vh;
+  }
   &__carousel {
     display: flex;
     padding: 1rem;
@@ -72,6 +74,9 @@
 
     &__phone {
       max-width: 260px;
+      @media (max-width: 768px) {
+        max-width: 140px;
+      }
     }
   }
 }
