--- a/src/app/home/hero/hero.scss
+++ b/src/app/home/hero/hero.scss
@@ -68,6 +68,7 @@ $background-blue: #eff6ff;
   @media (max-width: 768px) {
     max-width: 100%;
     position: unset;
+    padding: 24px 20px 40px 20px;
   }
 }
 
