--- a/src/app/about/intro/about-intro.scss
+++ b/src/app/about/intro/about-intro.scss
@@ -112,7 +112,7 @@
   }
 
   @media (max-width: 768px) {
-    padding: 2rem 1rem;
+    padding: 2rem 1rem 4rem 1rem;
 
     .intro-text {
       h2 {
