About Page - Gallery image changed

--- a/src/app/home/hero/hero.scss
+++ b/src/app/home/hero/hero.scss
@@ -45,7 +45,7 @@ $background-blue: #eff6ff;
 }
 
 // Profile Section
-.profile-section {
+.hero-content .profile-section {
   display: flex;
   flex-direction: column;
   align-items: center;
